syntax = "proto3";

service AuthService {
    rpc register (RegisterRequest) returns (ResponseStatus) {};
    rpc setToken(SetTokenRequest) returns (LoginResponse) {};
    rpc getUserByUserId (UserIdRequest) returns (UserDetail) {};
}

message RegisterRequest {
    string userName = 1;
    string password = 2;
    string displayName = 3;
    string fingerPrint = 4;
    string captcha = 5;
    string userId = 6;
    string type = 7;
    bool active = 8;
    UserDetail userDetail = 16;
}

message ResponseStatus {
    repeated string errors = 1;
    string token = 16;
    string userId = 17;
}

message UserDetail {
    double money = 1;
    double extraMoney = 2;
    string displayName = 3;
    string fullname = 4;
	string email = 5;
	string phone = 6;
	string address = 7;
	string birthday = 8;
    string country = 9;
    string gender = 10;
    string avatar = 11;
	string registerIp = 12;
	string ip = 13;
	string os = 14;
	string device = 15;
    string browser = 16;
    repeated string denyGameIds = 17;
    string group = 18;
    string type = 19;
}

message SetTokenRequest {
    string userId = 1;
    string token = 2;
    string secret = 3;
}

message LoginResponse {
    repeated string errors = 1;
    string token = 2;
    string displayName = 3;
    string wallet = 4;
    string userId = 5;
    int64 walletVersion = 6;
    string avatar = 7;
    string type = 8;
}

message UserIdRequest {
    string userId = 1;
}
